RESOLVED FIXED107980
AX: VoiceOver not reading bullets correctly in the text of notes
https://bugs.webkit.org/show_bug.cgi?id=107980
Summary AX: VoiceOver not reading bullets correctly in the text of notes
chris fleizach
Reported 2013-01-25 13:01:34 PST
WebKit is returning the wrong suffix for list markers
Attachments
patch (4.75 KB, patch)
2013-01-25 13:03 PST, chris fleizach
no flags
chris fleizach
Comment 1 2013-01-25 13:03:53 PST
Dominic Mazzoni
Comment 2 2013-01-25 13:31:12 PST
Comment on attachment 184797 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=184797&action=review > LayoutTests/platform/mac/accessibility/listmarker-suffix.html:29 > + var list1 = accessibilityController.accessibleElementById("listitem1"); Nit: how about item1 instead of list1 (and same below).
Dominic Mazzoni
Comment 3 2013-01-25 13:31:26 PST
Unofficial review, looks good.
WebKit Review Bot
Comment 4 2013-01-29 19:43:30 PST
Comment on attachment 184797 [details] patch Clearing flags on attachment: 184797 Committed r141212: <http://trac.webkit.org/changeset/141212>
WebKit Review Bot
Comment 5 2013-01-29 19:43:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.