AX: VoiceOver not reading bullets correctly in the text of notes https://bugs.webkit.org/show_bug.cgi?id=107980

Reviewed by Ryosuke Niwa.

Source/WebCore:

Accessibility code should not assume that all list markers end with the same "." suffix.
We need to use the actual suffix.

Test: platform/mac/accessibility/listmarker-suffix.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::listMarkerTextForNodeAndPosition):

LayoutTests:

* platform/mac/accessibility/listmarker-suffix-expected.txt: Added.
* platform/mac/accessibility/listmarker-suffix.html: Added.


Canonical link: https://commits.webkit.org/126495@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141212 268f45cc-cd09-0410-ab3c-d52691b4dbfc